Completed Sprint 2, Added BookingManager, Bookable, Maintainable, and started working on Calendar

--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
     <name>ZipAround</name>
 
     <properties>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.12.1</junit.version>
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -102,8 +102,13 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.calendarfx</groupId>
+            <artifactId>calendar</artifactId>
+            <version>12.0.1</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
