--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
         <junit.version>5.12.1</junit.version>
     </properties>
 
+    <parent>
+        <groupId>com.calendarfx</groupId>
+        <artifactId>calendar</artifactId>
+        <version>12.0.1</version>
+        <relativePath>./pom.xml</relativePath>
+    </parent>
+
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -103,9 +110,14 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.calendarfx</groupId>
-            <artifactId>calendar</artifactId>
-            <version>12.0.1</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
         </dependency>
     </dependencies>
 
