--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,15 @@
         <junit.version>5.12.1</junit.version>
     </properties>
 
-    <parent>
-        <groupId>com.calendarfx</groupId>
-        <artifactId>calendar</artifactId>
-        <version>12.0.1</version>
-        <relativePath>./pom.xml</relativePath>
-    </parent>
-
     <dependencies>
+        <!-- CalendarFX UI -->
+        <dependency>
+            <groupId>com.calendarfx</groupId>
+            <artifactId>view</artifactId>
+            <version>11.12.7</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
